[package]
name = "rustM32"
version = "0.1.0"
edition = "2021"

[profile.release]
# optimize for size
opt-level = 'z' #opt-level = 's'
# link with link time optimization (lto).
lto = true

[dependencies]
# provides access to low level ARM CPU registers (used for delay)
cortex-m = "0.7.7"
# provides startup code for the ARM CPU
cortex-m-rt = "0.7.5"
# Gives us access to the STM32F1 registers
stm32f1 = { version = "0.15.1", features = ["stm32f103", "rt"] }
# provies a panic-handler (halting cpu)
# (required when not using stdlib)
panic-halt = "1.0.0"
